--- a/views/admin/about/index.ejs
+++ b/views/admin/about/index.ejs
@@ -110,7 +110,6 @@
     transition: all 0.2s ease;
   }
 </style>
-  
   <div class="row">
     <div class="col-12">
       <div style="
@@ -119,7 +118,7 @@
           justify-content: space-between;
           align-items: center;
         ">
-        <h4 class="m-3" style="font-weight: 700">Uztozlar ro'yhati</h4>
+        <h4 class="m-3" style="font-weight: 700">Aboutlar ro'yhati</h4>
         <button type="button" class="btn btn-primary waves-effect waves-light" data-toggle="modal"
           data-target=".bs-example-modal-lg">
           Yaratish
@@ -127,23 +126,25 @@
       </div>
    
   
-      <div class="card m-b-30">
-        <div class="card-body">
-          <table id="datatable" class="table table-bordered text-center"
-            style="border-collapse: collapse; border-spacing: 0; width: 100%">
+      <div class="card col-md-12 table-responsive">
+        <div class="card-body table-responsive">
+          <table
+            id="datatable"
+            class="table table-bordered text-center "
+            style="border-collapse: collapse; border-spacing: 0; width: 100%; flex-wrap: wrap;"
+          >
             <thead>
               <tr>
                 <th>Photo</th>
-                <th>Ismi familyasi</th>
-                <th>Mutaxasisligi</th>
-                <th>Elektron pochtasi</th>
+                <th>Nomi</th>
+                <th>Tasnifi</th>
                 <th>Yaratilgan sana</th>
-                <th style="width: 15%">Sozlamalar</th>
+                <th style="width: 8%">Sozlamalar</th>
               </tr>
             </thead>
   
             <tbody>
-              <% for(let item of teachers) {%>
+              <% for(let item of about) {%>
                 <tr>
                   <td>
                     <div>
@@ -151,17 +152,15 @@
                     </div>
                 </td>
                   <td>
-                    <%= item.fullname %>
+                    <%= item.title %>
                   </td>
                   <td>
-                    <%= item.direction %>
+                    <%= item.description.split(' ',20).join(' ').toString() %> ...
                   </td>
                   <td>
-                    <%= item.email %>
+                    <%= item.createdAt.toLocaleString()%>
                   </td>
-                  <td>
-                    <%= item.createdAt.toLocaleString() %>
-                  </td>
+                
                   <td style="
                     display: flex;
                     flex-direction: row;
@@ -169,10 +168,10 @@
                     align-items: center;
                   ">
                     
-                    <a class="btn btn-warning" href="<%=`/user/${item._id}`%>">
-                      <i class="fas fa-cog"></i> 
+                    <a class="btn btn-warning" href="<%=`/about/${item._id}`%>">
+                      <i class="fas fa-cog"></i>
                     </a>
-                    <form method="POST" class="hidden-r" action="<%=`/user/${item._id}?_method=DELETE`%>">
+                    <form method="POST" class="hidden-r" action="<%=`/about/${item._id}?_method=DELETE`%>">
                       <button type="submit" class="btn btn-danger">
                         <i class="fa fa-trash"></i>
                       </button>
@@ -197,84 +196,78 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
+
         <div class="modal-body">
-          <form action="/user" method="POST" enctype="multipart/form-data" >
+          <form action="/about" method="POST"  ref='uploadForm' encType="multipart/form-data">
+            <div class="mb-3">
+              <label for="">Nomi</label>
+              <input type="text" name="title" class="form-control"  />
+            </div>
+            <div class="mb-3">
+              <label for="">Tasnifi </label>
+              <input type="text" name="description" class="form-control"  />
+            </div>
             
-            <div class="mb-3">
-              <label for="">Ism Familya </label>
-              <input type="text" name="fullname" class="form-control"  />
-            </div>
-            <div class="mb-3">
-              <label for="">Parol</label>
-              <input type="text" name="password" class="form-control"  />
-            </div>
-            <div class="mb-3">
-              <label for="">Mutaxasisligi </label>
-              <input type="text" name="direction" class="form-control"  />
-            </div>
-            <div class="mb-3">
-              <label for="">Elektron pochta </label>
-              <input type="text" name="email" class="form-control"  />
-            </div>
-         
-            <div class="mb-3">
-              <div class="input-group mb-3 pb-3 mt-2">
-                <div class="file-upload">
-                  <div class="image-upload-wrap">
-                    <input name="image"  class="file-upload-input" class="form-control" type="file" onchange="readURL(this);" single />
-                    <div class="drag-text">
-                      <h3>Rasm tanlang</h3>
-                    </div>
+          <div class="mb-3">
+            <div class="input-group mb-3 pb-3 mt-2">
+              <div class="file-upload">
+                <div class="image-upload-wrap">
+                  <input name="image" class="file-upload-input" class="form-control" type="file" onchange="readURL(this);" single />
+                  <div class="drag-text">
+                    <h3>Rasm tanlang</h3>
                   </div>
-                  <div class="file-upload-content">
-                    <img class="file-upload-image" src="<%teachers.image%>" />
-                    <div class="image-title-wrap">
-                      <button type="button" onclick="removeUpload()" class="remove-image">
-                        Remove <span class="image-title">Uploaded Image</span>
-                      </button>
-                    </div>
+                </div>
+                <div class="file-upload-content">
+                  <img class="file-upload-image" src="<%= about.image%>" />
+                  <div class="image-title-wrap">
+                    <button type="button" onclick="removeUpload()" class="remove-image">
+                      Remove <span class="image-title">Uploaded Image</span>
+                    </button>
                   </div>
                 </div>
               </div>
             </div>
-            <button type="submit" class="btn btn-primary col-md-5 mt-3">Saqlash</button>
-          </form>
           </div>
+
+
+            <button type="submit" class="btn btn-primary">Saqlash</button>
+          </form>
         </div>
-        </div>
-        </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
-        <script>
-        function readURL(input) {
-        if (input.files && input.files[0]) {
-        var reader = new FileReader();
-        
-        reader.onload = function (e) {
-          $(".image-upload-wrap").hide();
-        
-          $(".file-upload-image").attr("src", e.target.result);
-          $(".file-upload-content").show();
-        
-          $(".image-title").html(input.files[0].name);
-        };
-        
-        reader.readAsDataURL(input.files[0]);
-        } else {
-        removeUpload();
-        }
-        }
-        
-        function removeUpload() {
-        $(".file-upload-input").replaceWith($(".file-upload-input").clone());
-        $(".file-upload-content").hide();
-        $(".image-upload-wrap").show();
-        }
-        $(".image-upload-wrap").bind("dragover", function () {
-        $(".image-upload-wrap").addClass("image-dropping");
-        });
-        $(".image-upload-wrap").bind("dragleave", function () {
-        $(".image-upload-wrap").removeClass("image-dropping");
-        });
-        
-        </script>   
+      </div>
+    </div>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+ <script>
+   function readURL(input) {
+    if (input.files && input.files[0]) {
+      var reader = new FileReader();
+
+      reader.onload = function (e) {
+        $(".image-upload-wrap").hide();
+
+        $(".file-upload-image").attr("src", e.target.result);
+        $(".file-upload-content").show();
+
+        $(".image-title").html(input.files[0].name);
+      };
+
+      reader.readAsDataURL(input.files[0]);
+    } else {
+      removeUpload();
+    }
+  }
+
+  function removeUpload() {
+    $(".file-upload-input").replaceWith($(".file-upload-input").clone());
+    $(".file-upload-content").hide();
+    $(".image-upload-wrap").show();
+  }
+  $(".image-upload-wrap").bind("dragover", function () {
+    $(".image-upload-wrap").addClass("image-dropping");
+  });
+  $(".image-upload-wrap").bind("dragleave", function () {
+    $(".image-upload-wrap").removeClass("image-dropping");
+  });
+
+ </script>
