--- a/views/admin/course/index.ejs
+++ b/views/admin/course/index.ejs
@@ -256,7 +256,7 @@
                   </div>
                 </div>
                 <div class="file-upload-content">
-                  <img class="file-upload-image" src="/uploads/course" />
+                  <img class="file-upload-image" src="<%= course.image%>" />
                   <div class="image-title-wrap">
                     <button type="button" onclick="removeUpload()" class="remove-image">
                       Remove <span class="image-title">Uploaded Image</span>
