--- a/views/admin/about/update.ejs
+++ b/views/admin/about/update.ejs
@@ -118,24 +118,16 @@
 <div class="row">
     <div class="col-md-12 mt-3"
         style="display: flex; flex-direction: row; justify-content: space-between; flex-wrap: wrap;">
-        <form method="POST" action="<%=`/user/${teachers._id}?_method=PUT`%>" encType="multipart/form-data" class="col-md-8">
+        <form method="POST" action="<%=`/about/${about._id}?_method=PUT`%>" encType="multipart/form-data" class="col-md-8">
             <div class="mb-3">
-                <label>Ism Familya</label>
-                <input name="fullname" type="text" class="form-control" value="<%= teachers.fullname %>"  />
+                <label>Nomi</label>
+                <input name="title" type="text" class="form-control" value="<%= about.title %>"  />
             </div>
             <div class="mb-3">
-                <label>Parol</label>
-                <input name="password" type="text" class="form-control" value="" />
+                <label>Tasnifi</label>
+                <input name="description" type="text" class="form-control" value="<%= about.description%>" />
             </div>
-            <div class="mb-3">
-                <label>Mutaxasisligi</label>
-                <input name="direction" type="text" class="form-control" value="<%= teachers.direction %>"  />
-            </div>
-            <div class="mb-3">
-                <label>Elektron pochta</label>
-                <input name="email" type="text" class="form-control" value="<%= teachers.email %>"  />
-            </div>
-    
+
             <div class="mb-3">
                 <div class="input-group mb-3 pb-3 mt-2">
                   <div class="file-upload">
@@ -146,7 +138,7 @@
                       </div>
                     </div>
                     <div class="file-upload-content">
-                      <img class="file-upload-image" src="<%teachers.image%>" />
+                      <img class="file-upload-image" src="<%= about.image%>" />
                       <div class="image-title-wrap">
                         <button type="button" onclick="removeUpload()" class="remove-image">
                           Remove <span class="image-title">Uploaded Image</span>
