--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -23,9 +23,9 @@
                     <i class="mdi mdi-cube-outline bg-primary  text-white"></i>
                 </div>
                 <div>
-                    <h5 class="font-16">Active Sessions</h5>
+                    <h5 class="font-16">Kurslar soni</h5>
                 </div>
-                <h3 class="mt-4">43,225</h3>
+                <h3 class="mt-4"><%= course%> ta</h3>
                 <div class="progress mt-4" style="height: 4px;">
                     <div class="progress-bar bg-primary" role="progressbar" style="width: 75%"
                         aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
@@ -43,9 +43,9 @@
                     <i class="mdi mdi-briefcase-check bg-success text-white"></i>
                 </div>
                 <div>
-                    <h5 class="font-16">Total Revenue</h5>
+                    <h5 class="font-16">Yangiliklar soni</h5>
                 </div>
-                <h3 class="mt-4">$73,265</h3>
+                <h3 class="mt-4"><%= blog%> ta</h3>
                 <div class="progress mt-4" style="height: 4px;">
                     <div class="progress-bar bg-success" role="progressbar" style="width: 88%"
                         aria-valuenow="88" aria-valuemin="0" aria-valuemax="100"></div>
@@ -63,9 +63,9 @@
                     <i class="mdi mdi-tag-text-outline bg-warning text-white"></i>
                 </div>
                 <div>
-                    <h5 class="font-16">Average Price</h5>
+                    <h5 class="font-16">O'qituvchilar soni</h5>
                 </div>
-                <h3 class="mt-4">447</h3>
+                <h3 class="mt-4"><%= teacher%> ta</h3>
                 <div class="progress mt-4" style="height: 4px;">
                     <div class="progress-bar bg-warning" role="progressbar" style="width: 68%"
                         aria-valuenow="68" aria-valuemin="0" aria-valuemax="100"></div>
@@ -83,9 +83,9 @@
                     <i class="mdi mdi-buffer bg-danger text-white"></i>
                 </div>
                 <div>
-                    <h5 class="font-16">Add to Card</h5>
+                    <h5 class="font-16">O'quvchilar soni</h5>
                 </div>
-                <h3 class="mt-4">86%</h3>
+                <h3 class="mt-4">120 ta</h3>
                 <div class="progress mt-4" style="height: 4px;">
                     <div class="progress-bar bg-danger" role="progressbar" style="width: 82%"
                         aria-valuenow="82" aria-valuemin="0" aria-valuemax="100"></div>
@@ -98,129 +98,283 @@
 
 </div>
 
-
-<!-- START ROW -->
-<div class="row">
-    <div class="col-xl-12">
-        <div class="card m-b-30">
-            <div class="card-body">
-                <h4 class="mt-0 header-title mb-4">Active Deals</h4>
-                <div class="table-responsive">
-                    <table class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th scope="col">Name</th>
-                                <th scope="col">Status</th>
-                                <th scope="col">Amount</th>
-                                <th scope="col">Contact</th>
-                                <th scope="col">Location</th>
-                                <th scope="col" colspan="2">Date</th>
-
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Philip Smead</td>
-                                <td><span class="badge badge-success">Delivered</span></td>
-                                <td>$9,420,000</td>
-                                <td>
-                                    <div>
-                                        <img src="assets/images/users/user-2.jpg" alt=""
-                                            class="thumb-md rounded-circle mr-2"> Philip Smead
-                                    </div>
-                                </td>
-                                <td>Houston, TX 77074</td>
-                                <td>15/1/2018</td>
-
-                                <td>
-                                    <div>
-                                        <a href="#" class="btn btn-primary btn-sm">Edit</a>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Brent Shipley</td>
-                                <td><span class="badge badge-warning">Pending</span></td>
-                                <td>$3,120,000</td>
-                                <td>
-                                    <div>
-                                        <img src="assets/images/users/user-3.jpg" alt=""
-                                            class="thumb-md rounded-circle mr-2"> Brent Shipley
-                                    </div>
-                                </td>
-                                <td>Oakland, CA 94612</td>
-                                <td>16/1/2019</td>
-
-                                <td>
-                                    <div>
-                                        <a href="#" class="btn btn-primary btn-sm">Edit</a>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Robert Sitton</td>
-                                <td><span class="badge badge-success">Delivered</span></td>
-                                <td>$6,360,000</td>
-                                <td>
-                                    <div>
-                                        <img src="assets/images/users/user-4.jpg" alt=""
-                                            class="thumb-md rounded-circle mr-2"> Robert Sitton
-                                    </div>
-                                </td>
-                                <td>Hebron, ME 04238</td>
-                                <td>17/1/2019</td>
-
-                                <td>
-                                    <div>
-                                        <a href="#" class="btn btn-primary btn-sm">Edit</a>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Alberto Jackson</td>
-                                <td><span class="badge badge-danger">Cancel</span></td>
-                                <td>$5,200,000</td>
-                                <td>
-                                    <div>
-                                        <img src="assets/images/users/user-5.jpg" alt=""
-                                            class="thumb-md rounded-circle mr-2"> Alberto Jackson
-                                    </div>
-                                </td>
-                                <td>Salinas, CA 93901</td>
-                                <td>18/1/2019</td>
-
-                                <td>
-                                    <div>
-                                        <a href="#" class="btn btn-primary btn-sm">Edit</a>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>David Sanchez</td>
-                                <td><span class="badge badge-success">Delivered</span></td>
-                                <td>$7,250,000</td>
-                                <td>
-                                    <div>
-                                        <img src="assets/images/users/user-6.jpg" alt=""
-                                            class="thumb-md rounded-circle mr-2"> David Sanchez
-                                    </div>
-                                </td>
-                                <td>Cincinnati, OH 45202</td>
-                                <td>19/1/2019</td>
-
-                                <td>
-                                    <div>
-                                        <a href="#" class="btn btn-primary btn-sm">Edit</a>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-            </div>
+<style>
+    .file-upload {
+      background-color: #ffffff;
+      width: 600px;
+      margin: 0 auto;
+      padding: 10px;
+    }
+  
+    .file-upload-btn {
+      width: 100%;
+      margin: 0;
+      color: #fff;
+      background: #30419b;
+      border: none;
+      padding: 10px;
+      border-radius: 4px;
+      border-bottom: 4px solid #30419b;
+      transition: all 0.2s ease;
+      outline: none;
+      text-transform: uppercase;
+      font-weight: 700;
+    }
+  
+    .file-upload-btn:hover {
+      background: #30419b;
+      color: #ffffff;
+      transition: all 0.2s ease;
+      cursor: pointer;
+    }
+  
+    .file-upload-btn:active {
+      border: 0;
+      transition: all 0.2s ease;
+    }
+  
+    .file-upload-content {
+      display: none;
+      text-align: center;
+    }
+  
+    .file-upload-input {
+      position: absolute;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      outline: none;
+      opacity: 0;
+      cursor: pointer;
+    }
+  
+    .image-upload-wrap {
+      margin-top: 20px;
+      border: 4px dashed #30419b;
+      position: relative;
+    }
+  
+    .image-dropping,
+    .image-upload-wrap:hover {
+      background-color: #30419b;
+    }
+  
+    .image-title-wrap {
+      padding: 0 15px 15px 15px;
+      color: #222;
+    }
+  
+    .drag-text {
+      text-align: center;
+    }
+  
+    .drag-text h3 {
+      font-weight: 100;
+      text-transform: uppercase;
+      color: #000;
+      padding: 60px 0;
+    }
+  
+    .file-upload-image {
+      max-height: 300px;
+      max-width: 400px;
+      margin: auto;
+      padding: 20px;
+    }
+  
+    .remove-image {
+      width: 400px;
+      margin: 0;
+      color: rgb(0, 0, 0);
+      background: #30419b;
+      border: none;
+      padding: 10px;
+      border-radius: 4px;
+      border-bottom: 4px solid #30419b;
+      transition: all 0.2s ease;
+      outline: none;
+      text-transform: uppercase;
+      font-weight: 500;
+    }
+  
+    .remove-image:hover {
+      background: #30419b;
+      color: #ffffff;
+      transition: all 0.2s ease;
+      cursor: pointer;
+    }
+  
+    .remove-image:active {
+      border: 0;
+      transition: all 0.2s ease;
+    }
+  </style>
+    
+    <div class="row">
+      <div class="col-12">
+        <div style="
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+          ">
+          <h4 class="m-3" style="font-weight: 700">Adminlar ro'yhati</h4>
+          <button type="button" class="btn btn-primary waves-effect waves-light" data-toggle="modal"
+            data-target=".bs-example-modal-lg">
+            Yaratish
+          </button>
         </div>
+     
+    
+        <div class="card m-b-30">
+          <div class="card-body">
+            <table id="datatable" class="table table-bordered text-center"
+              style="border-collapse: collapse; border-spacing: 0; width: 100%">
+              <thead>
+                <tr>
+                  <th>Photo</th>
+                  <th>Ismi familyasi</th>
+                  <th>Mutaxasisligi</th>
+                  <th>Elektron pochtasi</th>
+                  <th>Yaratilgan sana</th>
+                  <th style="width: 15%">Sozlamalar</th>
+                </tr>
+              </thead>
+    
+              <tbody>
+                <% for(let item of teachers) {%>
+                  <tr>
+                    <td>
+                      <div>
+                          <img src="<%=item.image%>" alt="" class="thumb-md rounded-circle mr-2">
+                      </div>
+                  </td>
+                    <td>
+                      <%= item.fullname %>
+                    </td>
+                    <td>
+                      <%= item.direction %>
+                    </td>
+                    <td>
+                      <%= item.email %>
+                    </td>
+                    <td>
+                      <%= item.createdAt.toLocaleString() %>
+                    </td>
+                    <td style="
+                      display: flex;
+                      flex-direction: row;
+                      justify-content: space-around;
+                      align-items: center;
+                    ">
+                      <form method="POST" class="hidden-r" action="<%=`/user/${item._id}?_method=DELETE`%>">
+                        <button type="submit" class="btn btn-danger">
+                          <i class="fa fa-trash"></i>
+                        </button>
+                      </form>
+                    </td>
+                  </tr>
+                  <% } %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <!-- end col -->
     </div>
-
-</div>
-<!-- END ROW -->
+    <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title mt-0" id="myLargeModalLabel">Yaratish</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form action="/user" method="POST" enctype="multipart/form-data" >
+              
+              <div class="mb-3">
+                <label for="">Ism Familya </label>
+                <input type="text" name="fullname" class="form-control"  />
+              </div>
+              <div class="mb-3">
+                <label for="">Parol</label>
+                <input type="text" name="password" class="form-control"  />
+              </div>
+              <div class="mb-3">
+                <label for="">Mutaxasisligi </label>
+                <input type="text" name="direction" class="form-control"  />
+              </div>
+              <div class="mb-3">
+                <label for="">Roli </label>
+                <input type="text" name="role" class="form-control"  />
+              </div>
+              <div class="mb-3">
+                <label for="">Elektron pochta </label>
+                <input type="text" name="email" class="form-control"  />
+              </div>
+           
+              <div class="mb-3">
+                <div class="input-group mb-3 pb-3 mt-2">
+                  <div class="file-upload">
+                    <div class="image-upload-wrap">
+                      <input name="image"  class="file-upload-input" class="form-control" type="file" onchange="readURL(this);" single />
+                      <div class="drag-text">
+                        <h3>Rasm tanlang</h3>
+                      </div>
+                    </div>
+                    <div class="file-upload-content">
+                      <img class="file-upload-image" src="<%teachers.image%>" />
+                      <div class="image-title-wrap">
+                        <button type="button" onclick="removeUpload()" class="remove-image">
+                          Remove <span class="image-title">Uploaded Image</span>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <button type="submit" class="btn btn-primary col-md-5 mt-3">Saqlash</button>
+            </form>
+            </div>
+          </div>
+          </div>
+          </div>
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+          <script>
+          function readURL(input) {
+          if (input.files && input.files[0]) {
+          var reader = new FileReader();
+          
+          reader.onload = function (e) {
+            $(".image-upload-wrap").hide();
+          
+            $(".file-upload-image").attr("src", e.target.result);
+            $(".file-upload-content").show();
+          
+            $(".image-title").html(input.files[0].name);
+          };
+          
+          reader.readAsDataURL(input.files[0]);
+          } else {
+          removeUpload();
+          }
+          }
+          
+          function removeUpload() {
+          $(".file-upload-input").replaceWith($(".file-upload-input").clone());
+          $(".file-upload-content").hide();
+          $(".image-upload-wrap").show();
+          }
+          $(".image-upload-wrap").bind("dragover", function () {
+          $(".image-upload-wrap").addClass("image-dropping");
+          });
+          $(".image-upload-wrap").bind("dragleave", function () {
+          $(".image-upload-wrap").removeClass("image-dropping");
+          });
+          
+          </script>   
