--- a/views/admin/login/index.ejs
+++ b/views/admin/login/index.ejs
@@ -7,19 +7,19 @@
                 
                 <h5 class="font-18 text-center">Hamroh</h5>
 
-                <form class="form-horizontal m-t-30" action="/api/auth/login" method="POST">
+                <form class="form-horizontal m-t-30" action="/login" method="POST">
 
                     <div class="form-group">
                         <div class="col-12">
                             <label>Email</label>
-                            <input class="form-control" name="email" type="email" required="" placeholder="Email">
+                            <input class="form-control" name="email" type="text" required="" placeholder="Email">
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="col-12">
                             <label>Password</label>
-                            <input class="form-control" name="password" type="password" required="" placeholder="Password">
+                            <input class="form-control" name="password" type="text" required="" placeholder="Password">
                         </div>
                     </div>
 
