--- a/views/admin/login/layout.ejs
+++ b/views/admin/login/layout.ejs
@@ -5,15 +5,15 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Hamroh</title>
+    <title>SmartEDU</title>
     <meta content="Responsive admin theme build on top of Bootstrap 4" name="description" />
     <meta content="Themesdesign" name="author" />
-    <link rel="shortcut icon" href="assets/images/favicon.ico">
+    <link rel="shortcut icon" href="/images/favicon.ico">
 
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/metismenu.min.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link href="/admin/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/admin/assets/css/metismenu.min.css" rel="stylesheet" type="text/css">
+    <link href="/admin/assets/css/icons.css" rel="stylesheet" type="text/css">
+    <link href="/admin/assets/css/style.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -22,14 +22,14 @@
     <!-- Begin page -->
     <%- body  %> 
     <!-- jQuery  -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/metismenu.min.js"></script>
-    <script src="assets/js/jquery.slimscroll.js"></script>
-    <script src="assets/js/waves.min.js"></script>
+    <script src="/admin/assets/js/jquery.min.js"></script>
+    <script src="/admin/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="/admin/assets/js/metismenu.min.js"></script>
+    <script src="/admin/assets/js/jquery.slimscroll.js"></script>
+    <script src="/admin/assets/js/waves.min.js"></script>
 
     <!-- App js -->
-    <script src="assets/js/app.js"></script>
+    <script src="/admin/assets/js/app.js"></script>
 
 </body>
 
