--- a/views/admin/news/index.ejs
+++ b/views/admin/news/index.ejs
@@ -218,7 +218,7 @@
                   </div>
                 </div>
                 <div class="file-upload-content">
-                  <img class="file-upload-image" src="/uploads" />
+                  <img class="file-upload-image" src="<%= blog.image%>" />
                   <div class="image-title-wrap">
                     <button type="button" onclick="removeUpload()" class="remove-image">
                       Remove <span class="image-title">Uploaded Image</span>
