--- a/views/admin/slider/index.ejs
+++ b/views/admin/slider/index.ejs
@@ -5,6 +5,7 @@
     margin: 0 auto;
     padding: 10px;
   }
+
   .file-upload-btn {
     width: 100%;
     margin: 0;
@@ -19,20 +20,24 @@
     text-transform: uppercase;
     font-weight: 700;
   }
+
   .file-upload-btn:hover {
     background: #30419b;
     color: #ffffff;
     transition: all 0.2s ease;
     cursor: pointer;
   }
+
   .file-upload-btn:active {
     border: 0;
     transition: all 0.2s ease;
   }
+
   .file-upload-content {
     display: none;
     text-align: center;
   }
+
   .file-upload-input {
     position: absolute;
     margin: 0;
@@ -43,34 +48,41 @@
     opacity: 0;
     cursor: pointer;
   }
+
   .image-upload-wrap {
     margin-top: 20px;
     border: 4px dashed #30419b;
     position: relative;
   }
+
   .image-dropping,
   .image-upload-wrap:hover {
     background-color: #30419b;
   }
+
   .image-title-wrap {
     padding: 0 15px 15px 15px;
     color: #222;
   }
+
   .drag-text {
     text-align: center;
   }
+
   .drag-text h3 {
     font-weight: 100;
     text-transform: uppercase;
     color: #000;
     padding: 60px 0;
   }
+
   .file-upload-image {
     max-height: 300px;
     max-width: 400px;
     margin: auto;
     padding: 20px;
   }
+
   .remove-image {
     width: 400px;
     margin: 0;
@@ -85,106 +97,128 @@
     text-transform: uppercase;
     font-weight: 500;
   }
+
   .remove-image:hover {
     background: #30419b;
     color: #ffffff;
     transition: all 0.2s ease;
     cursor: pointer;
   }
+
   .remove-image:active {
     border: 0;
     transition: all 0.2s ease;
   }
 </style>
-
-<div class="row">
-  <div class="col-12">
-    <div style="
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-      ">
-      <h4 class="m-3" style="font-weight: 700">Sliderlar ro'yhati</h4>
-      <button type="button" class="btn btn-primary waves-effect waves-light" data-toggle="modal"
-        data-target=".bs-example-modal-lg">
-        Yaratish
-      </button>
-    </div>
- 
-
-    <div class="card m-b-30">
-      <div class="card-body">
-        <table id="datatable" class="table table-bordered text-center"
-          style="border-collapse: collapse; border-spacing: 0; width: 100%">
-          <thead>
-            <tr>
-              <th>Slider rasmi</th>
-              <th>Yaratilgan sana</th>
-              <th style="width: 15%">Sozlamalar</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <% for(let item of result) {%>
-              <tr>
-                <td>
-                  <img style="width: 80px" src="/uploads/<%= item.image %>" name="image">
-                </td>
-                
-                <td>
-                  <%= moment(item.createdAt).format("DD-MM-YYYY - hh:mm:ss") %>
-                </td>
-                <td style="
-                  display: flex;
-                  flex-direction: row;
-                  justify-content: space-around;
-                  align-items: center;
-                ">
-                  <a class="btn btn-warning" href="<%=`/api/slider/${item._id}`%>">
-                    <i class="fas fa-cog"></i>
-                  </a>
-                  <form method="POST" class="hidden-r" action="<%=`/api/slider/${item._id}?_method=DELETE`%>">
-                    <button type="submit" class="btn btn-danger">
-                      <i class="fa fa-trash"></i>
-                    </button>
-                  </form>
-                </td>
-              </tr>
-              <% } %>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-  <!-- end col -->
-</div>
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title mt-0" id="myLargeModalLabel">Yaratish</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+  <div class="row">
+    <div class="col-12">
+      <div style="
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          align-items: center;
+        ">
+        <h4 class="m-3" style="font-weight: 700">Aboutlar ro'yhati</h4>
+        <button type="button" class="btn btn-primary waves-effect waves-light" data-toggle="modal"
+          data-target=".bs-example-modal-lg">
+          Yaratish
         </button>
       </div>
-      <div class="modal-body">
-        <form action="/api/slider/add" method="POST" ref="uploadForm" encType="multipart/form-data">
-         
+   
+  
+      <div class="card col-md-12 table-responsive">
+        <div class="card-body table-responsive">
+          <table
+            id="datatable"
+            class="table table-bordered text-center "
+            style="border-collapse: collapse; border-spacing: 0; width: 100%; flex-wrap: wrap;"
+          >
+            <thead>
+              <tr>
+                <th>Photo</th>
+                <th>Nomi</th>
+                <th>Tasnifi</th>
+                <th>Yaratilgan sana</th>
+                <th style="width: 8%">Sozlamalar</th>
+              </tr>
+            </thead>
+  
+            <tbody>
+              <% for(let item of slider) {%>
+                <tr>
+                  <td>
+                    <div>
+                        <img src="<%=item.image%>" alt="" class="thumb-md rounded-circle mr-2">
+                    </div>
+                </td>
+                  <td>
+                    <%= item.name %>
+                  </td>
+                  <td>
+                    <%= item.title.split(' ',20).join(' ').toString() %> ...
+                  </td>
+                  <td>
+                    <%= item.createdAt.toLocaleString()%>
+                  </td>
+                
+                  <td style="
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-around;
+                    align-items: center;
+                  ">
+                    
+                    <a class="btn btn-warning" href="<%=`/slider/${item._id}`%>">
+                      <i class="fas fa-cog"></i>
+                    </a>
+                    <form method="POST" class="hidden-r" action="<%=`/slider/${item._id}?_method=DELETE`%>">
+                      <button type="submit" class="btn btn-danger">
+                        <i class="fa fa-trash"></i>
+                      </button>
+                    </form>
+                  </td>
+                </tr>
+                <% } %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <!-- end col -->
+  </div>
+  <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title mt-0" id="myLargeModalLabel">Yaratish</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
 
-
+        <div class="modal-body">
+          <form action="/edu" method="POST"  ref='uploadForm' encType="multipart/form-data">
+            <div class="mb-3">
+              <label for="">Nomi</label>
+              <input type="text" name="name" class="form-control"  />
+            </div>
+            <div class="mb-3">
+              <label for="">Tasnifi </label>
+              <input type="text" name="title" class="form-control"  />
+            </div>
+            
           <div class="mb-3">
             <div class="input-group mb-3 pb-3 mt-2">
               <div class="file-upload">
                 <div class="image-upload-wrap">
-                  <input name="image" class="file-upload-input" type="file" onchange="readURL(this);" multiple />
+                  <input name="image" class="file-upload-input" class="form-control" type="file" onchange="readURL(this);" single />
                   <div class="drag-text">
                     <h3>Rasm tanlang</h3>
                   </div>
                 </div>
                 <div class="file-upload-content">
-                  <img class="file-upload-image" src="/uploads/course" />
+                  <img class="file-upload-image" src="<%= slider.image%>" />
                   <div class="image-title-wrap">
                     <button type="button" onclick="removeUpload()" class="remove-image">
                       Remove <span class="image-title">Uploaded Image</span>
@@ -196,36 +230,34 @@
           </div>
 
 
-          
-          <button type="submit" class="btn btn-primary">Saqlash</button>
-        </form>
+            <button type="submit" class="btn btn-primary">Saqlash</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
-<script>
-  axios
-        .get(
-          `/course/axios`
-        ).then(res => {
-          console.log(res.data)
-        })
-  function readURL(input) {
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+ <script>
+   function readURL(input) {
     if (input.files && input.files[0]) {
       var reader = new FileReader();
+
       reader.onload = function (e) {
         $(".image-upload-wrap").hide();
+
         $(".file-upload-image").attr("src", e.target.result);
         $(".file-upload-content").show();
+
         $(".image-title").html(input.files[0].name);
       };
+
       reader.readAsDataURL(input.files[0]);
     } else {
       removeUpload();
     }
   }
+
   function removeUpload() {
     $(".file-upload-input").replaceWith($(".file-upload-input").clone());
     $(".file-upload-content").hide();
@@ -237,4 +269,5 @@
   $(".image-upload-wrap").bind("dragleave", function () {
     $(".image-upload-wrap").removeClass("image-dropping");
   });
-</script>
+
+ </script>
