--- a/views/admin_layout.ejs
+++ b/views/admin_layout.ejs
@@ -8,7 +8,7 @@
     <title>Adminstrator</title>
     <meta content="Responsive admin theme build on top of Bootstrap 4" name="description" />
     <meta content="Themesdesign" name="author" />
-    <link rel="shortcut icon" href="assets/images/favicon.ico">
+    <link rel="shortcut icon" href="/images/favicon.ico">
 
 
     <!--Morris Chart CSS -->
@@ -33,7 +33,7 @@
             <div class="topbar-left">
                 <a href="/admin" class="logo">
                     <span class="logo-light">
-                        <i class="mdi mdi-camera-control"></i> HAMROH-Admin
+                        <i class="mdi mdi-camera-control"></i> SMARTEDU-Admin
                     </span>
                     <span class="logo-sm">
                         <i class="mdi mdi-camera-control"></i>
@@ -48,19 +48,19 @@
                     <li class="dropdown notification-list list-inline-item d-none d-md-inline-block">
                         <a class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown" href="#"
                             role="button" aria-haspopup="false" aria-expanded="false">
-                            <img src="assets/images/flags/us_flag.jpg" class="mr-2" height="12" alt="" /> English <span
+                            <img src="/admin/assets/images/flags/us_flag.jpg" class="mr-2" height="12" alt="" /> English <span
                                 class="mdi mdi-chevron-down"></span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right dropdown-menu-animated language-switch">
-                            <a class="dropdown-item" href="#"><img src="assets/images/flags/french_flag.jpg" alt=""
+                            <a class="dropdown-item" href="#"><img src="/admin/assets/images/flags/french_flag.jpg" alt=""
                                     height="16" /><span> French </span></a>
-                            <a class="dropdown-item" href="#"><img src="assets/images/flags/spain_flag.jpg" alt=""
+                            <a class="dropdown-item" href="#"><img src="/admin/assets/images/flags/spain_flag.jpg" alt=""
                                     height="16" /><span> Spanish </span></a>
-                            <a class="dropdown-item" href="#"><img src="assets/images/flags/russia_flag.jpg" alt=""
+                            <a class="dropdown-item" href="#"><img src="/admin/assets/images/flags/russia_flag.jpg" alt=""
                                     height="16" /><span> Russian </span></a>
-                            <a class="dropdown-item" href="#"><img src="assets/images/flags/germany_flag.jpg" alt=""
+                            <a class="dropdown-item" href="#"><img src="/admin/assets/images/flags/germany_flag.jpg" alt=""
                                     height="16" /><span> German </span></a>
-                            <a class="dropdown-item" href="#"><img src="assets/images/flags/italy_flag.jpg" alt=""
+                            <a class="dropdown-item" href="#"><img src="/admin/assets/images/flags/italy_flag.jpg" alt=""
                                     height="16" /><span> Italian </span></a>
                         </div>
                     </li>
@@ -84,7 +84,7 @@
                                 <!-- item-->
                                 <a class="dropdown-item" href=""><i class="mdi mdi-account-circle"></i> Profile</a>
                                
-                                <a class="dropdown-item text-danger" href="/api/auth/logout"><i class="mdi mdi-power text-danger"></i>
+                                <a class="dropdown-item text-danger" href="/logout"><i class="mdi mdi-power text-danger"></i>
                                     Logout</a>
                             </div>
                         </div>
@@ -99,7 +99,7 @@
                         </button>
                     </li>
                     <li class="d-none d-md-inline-block">
-                        <form action="/api/search/admin" class="app-search">
+                        <form action="/search" class="app-search">
                             <div class="form-group mb-0">
                                 <input type="search" name="name" class="form-control"
                                     placeholder="Saytdan izlash..." autocomplete="off" />
@@ -124,8 +124,8 @@
                     <ul class="metismenu" id="side-menu">
                         <li class="menu-title">Menu</li>
                         <li>
-                            <a href="/admin/dashboard" class="waves-effect">
-                                <i class="icon-accelerator"></i> <span> Statistika </span>
+                            <a href="/admin" class="waves-effect">
+                                <i class="icon-accelerator"></i> <span> Dashboard </span>
                             </a>
                         </li>
                         <li>
@@ -144,28 +144,23 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/api/order/unseen" class="waves-effect">
-                                <i class="icon-accelerator"></i> <span> Buyurtmalar </span>
+                            <a href="/phrase" class="waves-effect">
+                                <i class="icon-accelerator"></i> <span> Frazalar </span>
                             </a>
                         </li>
                         <li>
-                            <a href="/api/faq/all" class="waves-effect">
-                                <i class="icon-accelerator"></i> <span> FAQ </span>
+                            <a href="/about" class="waves-effect">
+                                <i class="icon-accelerator"></i> <span> Biz haqimizda </span>
                             </a>
                         </li>
                         <li>
-                            <a href="/api/contact/unseen" class="waves-effect">
-                                <i class="icon-accelerator"></i> <span> Murojaat </span>
+                            <a href="/edu" class="waves-effect">
+                                <i class="icon-accelerator"></i> <span> Sliderlar </span>
                             </a>
                         </li>
                         <li>
-                            <a href="/api/slider/all" class="waves-effect">
-                                <i class="icon-accelerator"></i> <span> Slider </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/api/chegirma/all" class="waves-effect">
-                                <i class="icon-accelerator"></i> <span> Chegirma </span>
+                            <a href="/contact/all" class="waves-effect">
+                                <i class="icon-accelerator"></i> <span> Murojaatlar </span>
                             </a>
                         </li>
                     </ul>
