--- a/views/page/course.ejs
+++ b/views/page/course.ejs
@@ -23,7 +23,7 @@
 						</div>
 						<div class="course-br">
 							<div class="course-title">
-								<h2><a href="/course/<%=`${item._id}`%>" title=""><%= item.name%>></a></h2>
+								<h2><a href="/course/<%=`${item._id}`%>" title=""><%= item.name%></a></h2>
 							</div>
 							<div class="course-desc">
 								<a href="/course/<%=`${item._id}`%>"><p><%= item.description.split(' ',15).join(' ').toString()%> ...</p></a>
