--- a/views/page/title.ejs
+++ b/views/page/title.ejs
@@ -195,7 +195,7 @@
                                 <div class="col-md-4">
                                     <div class="pricing-table pricing-table-highlighted">
                                         <div class="pricing-table-header grd1">
-                                            <h2><%= data.result.price * (12*1.3)%> so'm</h2>
+                                            <h2><%= Math.floor(data.result.price * (12*1.3))%> so'm</h2>
                                             <h3>Yillik to'lov</h3>
                                         </div>
                                         <div class="pricing-table-space"></div>
